All_Component_DX/force-app/main/default/objects/Product_Serial__c/Product_Serial__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to track serial numbers in a product&apos;s inventory at a given location.</description>
    <label>Stocked Serial/Batch Detail</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocked Serial/Batch Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>