All_Component_DX/force-app/main/default/objects/Product_Serial__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates Serial Number record is active or not.</description>
    <inlineHelpText>Flag indicates Serial Number record is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>