All_Component_DX/force-app/main/default/objects/Product_Serial__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to an existing product record.</description>
    <inlineHelpText>This is a lookup to an existing product record.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>