All_Component_DX/force-app/main/default/objects/Product_Serial__c/fields/SM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SM_Quantity__c</fullName>
    <description>Batch or lot quantity within a stocking location.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>